v1.0.0/modules/schema/pages/class/TransformerTankEnd.adoc
= `TransformerTankEnd`
:toclevels: 4


+++Transformer tank end represents an individual winding for unbalanced models or for transformer tanks connected into a bank (and bank is modelled with the PowerTransformer).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerTankEnd`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/TransformerEnd.adoc[`TransformerEnd`]
*** *`TransformerTankEnd`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransformerTankEnd {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerTank {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













PhaseTapChanger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerStarImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RatioTapChanger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BaseVoltage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerCoreAdmittance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindingInsulation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WindingInsulation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TransformerTankEnd -> TransformerTank: TransformerTank







TransformerTankEnd -> PhaseTapChanger: PhaseTapChanger


TransformerTankEnd -> TransformerStarImpedance: StarImpedance


TransformerTankEnd -> RatioTapChanger: RatioTapChanger


TransformerTankEnd -> BaseVoltage: BaseVoltage


TransformerTankEnd -> Terminal: Terminal


TransformerTankEnd -> TransformerMeshImpedance: ToMeshImpedance


TransformerTankEnd -> TransformerMeshImpedance: FromMeshImpedance


TransformerTankEnd -> TransformerCoreAdmittance: CoreAdmittance


TransformerTankEnd -> WindingInsulation: FromWindingInsulations


TransformerTankEnd -> WindingInsulation: ToWindingInsulations


TransformerTankEnd -> DiagramObject: DiagramObjects


TransformerTankEnd -> InstanceSet: InstanceSet


TransformerTankEnd -> Name: Names


TransformerTankEnd -> ChangeSetMember: PropertiesCIMDataObject


TransformerTankEnd -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TransformerTank,`TransformerTank`>>
| 0..1
| xref::class/TransformerTank.adoc[`TransformerTank`]
| +++Transformer this winding belongs to.+++

| <<phases,`phases`>>
| 0..1
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Describes the phases carried by a conducting equipment.+++

| <<BaseVoltage,`BaseVoltage`>>
| 0..1
| xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of the transformer end.  This is essential for PU calculation.+++

| <<CoreAdmittance,`CoreAdmittance`>>
| 0..1
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++

| <<PhaseTapChanger,`PhaseTapChanger`>>
| 0..1
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]
| +++Phase tap changer associated with this transformer end.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RatioTapChanger,`RatioTapChanger`>>
| 0..1
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]
| +++Ratio tap changer associated with this transformer end.+++

| <<StarImpedance,`StarImpedance`>>
| 0..1
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++

| <<Terminal,`Terminal`>>
| 0..1
| xref::class/Terminal.adoc[`Terminal`]
| +++Terminal of the power transformer to which this transformer end belongs.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<bmagSat,`bmagSat`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Core shunt magnetizing susceptance in the saturation region.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<endNumber,`endNumber`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++

| <<grounded,`grounded`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++(for Yn and Zn connections) True if the neutral is solidly grounded.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<magBaseU,`magBaseU`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++The reference voltage at which the magnetizing saturation measurements were made.+++

| <<magSatFlux,`magSatFlux`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Core magnetizing saturation curve knee flux level.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<rground,`rground`>>
| 0..1
| xref::class/Resistance.adoc[`Resistance`]
| +++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++

| <<xground,`xground`>>
| 0..1
| xref::class/Reactance.adoc[`Reactance`]
| +++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<FromMeshImpedance,`FromMeshImpedance`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++

| <<FromWindingInsulations,`FromWindingInsulations`>>
| 0..*
| xref::class/WindingInsulation.adoc[`WindingInsulation`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<ToMeshImpedance,`ToMeshImpedance`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++

| <<ToWindingInsulations,`ToWindingInsulations`>>
| 0..*
| xref::class/WindingInsulation.adoc[`WindingInsulation`]
| n/a
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of the transformer end.  This is essential for PU calculation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#bmagSat]
=== `bmagSat`
+++Core shunt magnetizing susceptance in the saturation region.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.bmagSat`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#FromMeshImpedance]
=== `FromMeshImpedance`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#FromWindingInsulations]
=== `FromWindingInsulations`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#grounded]
=== `grounded`
+++(for Yn and Zn connections) True if the neutral is solidly grounded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.grounded`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#magBaseU]
=== `magBaseU`
+++The reference voltage at which the magnetizing saturation measurements were made.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magBaseU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#magSatFlux]
=== `magSatFlux`
+++Core magnetizing saturation curve knee flux level.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magSatFlux`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#phases]
=== `phases`
+++Describes the phases carried by a conducting equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankEnd.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]


|===

//[discrete]
[#PhaseTapChanger]
=== `PhaseTapChanger`
+++Phase tap changer associated with this transformer end.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.PhaseTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RatioTapChanger]
=== `RatioTapChanger`
+++Ratio tap changer associated with this transformer end.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.RatioTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#rground]
=== `rground`
+++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.rground`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#StarImpedance]
=== `StarImpedance`
+++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.StarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Terminal]
=== `Terminal`
+++Terminal of the power transformer to which this transformer end belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#ToMeshImpedance]
=== `ToMeshImpedance`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#ToWindingInsulations]
=== `ToWindingInsulations`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

//[discrete]
[#TransformerTank]
=== `TransformerTank`
+++Transformer this winding belongs to.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankEnd.TransformerTank`
| Cardinality
| 0..1
| Type
| xref::class/TransformerTank.adoc[`TransformerTank`]


|===

//[discrete]
[#xground]
=== `xground`
+++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.xground`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===


